- Added IntelliJ entries for .gitignore - Finally correctly configured the web.xml and struts.xml to work - Started work on the MessagesController to redirect on save. I've been less than successful on that.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 #################
+## IntelliJ IDEA
+#################
+.idea/
+*.iml
+
+#################
 ## Eclipse
 #################
 
@@ -162,3 +168,4 @@ pip-log.txt
 # Mac crap
 .DS_Store
 target
+/src/main/resources/rebel.xml
