--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,13 @@
 		<artifactId>struts2-convention-plugin</artifactId>
 		<version>2.3.4.1</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.struts</groupId>
+		<artifactId>struts2-config-browser-plugin</artifactId>
+		<version>2.3.4.1</version>
+	</dependency>        
   </dependencies>
   <build>
-    <finalName>tuto_hello</finalName>
+    <finalName>struts-2-rest</finalName>
   </build>
 </project>
