--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,10 +7,22 @@
         <filter-name>struts2</filter-name>
         <filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
     </filter>
+	<filter>
+	    <filter-name>struts-execute</filter-name>
+	    <filter-class>
+	    	org.apache.struts2.dispatcher.ng.filter.StrutsExecuteFilter
+	    </filter-class>
+	</filter>
+    
     <filter-mapping>
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+	<filter-mapping>
+		<filter-name>struts-execute</filter-name>
+		<url-pattern>*.action</url-pattern>
+	</filter-mapping>
+    
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
